; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_match_pathspec.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_match_pathspec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }
%struct.pathspec = type { i32 }

@DO_MATCH_DIRECTORY = common dso_local global i32 0, align 4
@PATHSPEC_EXCLUDE = common dso_local global i32 0, align 4
@DO_MATCH_EXCLUDE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @match_pathspec(%struct.index_state* %0, %struct.pathspec* %1, i8* %2, i32 %3, i32 %4, i8* %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.index_state*, align 8
  %10 = alloca %struct.pathspec*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store %struct.index_state* %0, %struct.index_state** %9, align 8
  store %struct.pathspec* %1, %struct.pathspec** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i32 %6, i32* %15, align 4
  %19 = load i32, i32* %15, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %7
  %22 = load i32, i32* @DO_MATCH_DIRECTORY, align 4
  br label %24

23:                                               ; preds = %7
  br label %24

24:                                               ; preds = %23, %21
  %25 = phi i32 [ %22, %21 ], [ 0, %23 ]
  store i32 %25, i32* %18, align 4
  %26 = load %struct.index_state*, %struct.index_state** %9, align 8
  %27 = load %struct.pathspec*, %struct.pathspec** %10, align 8
  %28 = load i8*, i8** %11, align 8
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* %13, align 4
  %31 = load i8*, i8** %14, align 8
  %32 = load i32, i32* %18, align 4
  %33 = call i32 @do_match_pathspec(%struct.index_state* %26, %struct.pathspec* %27, i8* %28, i32 %29, i32 %30, i8* %31, i32 %32)
  store i32 %33, i32* %16, align 4
  %34 = load %struct.pathspec*, %struct.pathspec** %10, align 8
  %35 = getelementptr inbounds %struct.pathspec, %struct.pathspec* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @PATHSPEC_EXCLUDE, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %24
  %41 = load i32, i32* %16, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %45, label %43

43:                                               ; preds = %40, %24
  %44 = load i32, i32* %16, align 4
  store i32 %44, i32* %8, align 4
  br label %63

45:                                               ; preds = %40
  %46 = load %struct.index_state*, %struct.index_state** %9, align 8
  %47 = load %struct.pathspec*, %struct.pathspec** %10, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = load i32, i32* %12, align 4
  %50 = load i32, i32* %13, align 4
  %51 = load i8*, i8** %14, align 8
  %52 = load i32, i32* %18, align 4
  %53 = load i32, i32* @DO_MATCH_EXCLUDE, align 4
  %54 = or i32 %52, %53
  %55 = call i32 @do_match_pathspec(%struct.index_state* %46, %struct.pathspec* %47, i8* %48, i32 %49, i32 %50, i8* %51, i32 %54)
  store i32 %55, i32* %17, align 4
  %56 = load i32, i32* %17, align 4
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %59

58:                                               ; preds = %45
  br label %61

59:                                               ; preds = %45
  %60 = load i32, i32* %16, align 4
  br label %61

61:                                               ; preds = %59, %58
  %62 = phi i32 [ 0, %58 ], [ %60, %59 ]
  store i32 %62, i32* %8, align 4
  br label %63

63:                                               ; preds = %61, %43
  %64 = load i32, i32* %8, align 4
  ret i32 %64
}

declare dso_local i32 @do_match_pathspec(%struct.index_state*, %struct.pathspec*, i8*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
